加上背包欄

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,12 +7,18 @@
 
   <script src="/javascripts/pixi/pixi.min.js"></script>
 
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner&family=Quicksand:wght@300&display=swap" rel="stylesheet">
+
   <body>
     <center>
-      <h1>Achievement System</h1>
+      <p class="title">Gather Town 成就系統</h1>
       <p><h3>班級 : 401</h3></p>
       <p><h3>座號 : 01</h3></p>
       <hr>
+      <br>
       <div id="GameCanvas"></div>
     </center>
       <script src="/javascripts/game.js"></script>
