--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,7 +3,12 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
+.title {
+  font-family: 'Quicksand', sans-serif;
+  font-size: 50px;
+}
+
 canvas {
   border-radius: 15px;
-  box-shadow: 0px 0px 13px #606060;
+  box-shadow: 0px 0px 8px #606060;
 }
