註解掉用不到的字

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,11 +15,11 @@
 
   <body>
     <center>
-      <p class="title">Gather Town 成就系統</h1>
+      <!-- <p class="title">Gather Town 成就系統</h1>
       <p><h3>班級 : 401</h3></p>
       <p><h3>座號 : 01</h3></p>
       <hr>
-      <br>
+      <br> -->
       <div id="GameCanvas"></div>
       <script src="/javascripts/game.js"></script>
     </center>
